# Taller-de-Programacion

./: .dockerignore  .gitignore  Cargo.docker.toml  Cargo.toml  Dockerfile  Makefile  README.md  cluster.sh  docker-compose.microservices.yaml  docker-compose.redis.yaml  microservice_llm.sh  node.sh
cli/: Cargo.toml
cli/src/: main.rs
configs/: redis_01.conf  redis_02.conf  redis_03.conf  redis_04.conf  redis_05.conf  redis_06.conf  redis_07.conf  redis_08.conf  redis_09.conf  users.txt
distributed_configs/: redis_01.conf  redis_02.conf  redis_03.conf  redis_04.conf  redis_05.conf  redis_06.conf  redis_07.conf  redis_08.conf  redis_09.conf  users_test.txt
documents-handler-service/: Cargo.toml  README.md
documents-handler-service/src/: configuration.rs  document_error.rs  documents.rs  lib.rs  main.rs  save_timer.rs  sheets.rs
documents-handler-service/src/documents/: document.rs  document_operations.rs  document_subscriptions_handler.rs  documents_tracker.rs  redis_document.rs
documents-handler-service/src/sheets/: redis_sheet.rs  sheet_operations.rs  sheet_tracker.rs
events/: Cargo.toml
interpretefth/: Cargo.toml
json/: Cargo.toml
microservice_llm/: Cargo.toml
microservice_llm/src/: call_llm.rs  configuration.rs  constantes.rs  llm_error.rs  main.rs  microservice.rs  redis_connect.rs
ui_client/: Cargo.toml
ui_client/src/: excel_formulas.rs  excel_parser.rs  lib.rs  main.rs  main_ui.rs  processes.rs  redis_command_process.rs  redis_ia_subscribe_process.rs  redis_subscribe_process.rs  rusty_docs_ui.rs  rusty_excel_ui.rs  ui_error.rs  user_data.rs
(+163 files in other folders)
