[package]
name = "documents-handler-service"
version = "0.1.0"
edition = "2024"

[dependencies]
redis_client = {path = "../redis_client", version = "0.1.0"}
common = {path = "../common", version = "0.1.0"}
logger = {path = "../logger", version = "0.1.0"}
chrono = "0.4"
json = {path = "../json", version = "0.1.0"}
events = {path = "../events", version = "0.1.0"}
